[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
leaky-bucket = "1.1.2"
ndarray = "0.16.1"
rand = "0.8.5"
serde = { version = "1.0.216", features = ["serde_derive"] }
serde_json = "1.0.133"
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = { version = "1.28.2", features = ["time"] }
toml = "0.8.19"
